# robocap-tools

./: .gitignore  .gitmodules  API_DOCUMENTATION.md  CMakeLists.txt  Dockerfile_ros1_20_04  Makefile  README.md  changes.md  check_ffmpeg.sh  docker-compose.yml  docker-run.sh  imu_timestamp_analyzer.py  video_timestamp_analyzer.py
api/: app.py  calibration_runner.py  database.py  entrypoint.sh
config/: april_6x6.yaml
config/imu-launch-files/: imu_left_2.launch  imu_mid_0.launch  imu_right_1.launch
config/imu_intrinsic/: imu0.launch  imu0_imu_param.yaml  imu1.launch  imu2.launch
example/scripts/: getmp4_basetime.sh
patches/: code_utils_20251217.patch  kalibr_20251222.patch  kalibr_20260106_fix_focal_init_failed.patch
s3sdk/: INSTALL.md  README.md  config_reader.py  device_list_reader.py  download.py  list_files.py  requirements.txt  s3_config.example.json  setup.py  upload.py
s3sdk/s3_sdk/: __init__.py  config.py  exceptions.py  s3_client.py  s3_sdk.py
scripts/: 01_ros_env.sh  02_cams_intrinsic.sh  03_imus_intrinsic.sh  04_cams_imu0_extinsic.sh  BATCH_CALIBRATION_README.md  CALIB_OPTIMIZATION_PROPOSAL.md  CALIB_OPTIMIZATION_SUMMARY.md  CALL_FLOW_AND_PATHS.md  CHANGELOG.md  CODE_REVIEW_ISSUES.md  SCRIPT_USAGE_REPORT.md  UNUSED_SCRIPTS_ANALYSIS.md  batch_calibration_manager.py  calib_cams_imu_extrinsic.py  calib_cams_intrinsic.py  calib_imus_intrinsic.py  calibration_common.py  calibration_executor.py  calibration_result_handler.py  calibration_task.py  calibration_validation.py  calibration_validation_README.md  calibration_validation_plan.md  create_rosbag_from_db.py  device_calibration_manager.py  extract_imu_params.py  extrinsic_result_parser.py  imu_calibration_helper.py  intrinsic_result_parser.py  kalibr_executor.py  merge_imu_data.py  merge_multi_imu_data.py  result_recorder.py  results_report.py  robocap_env.py  rosbag_creator_helper.py  rosbag_helper.py  s3_uploader.py
src/: main.cpp
src/decoder/: video_decoder.cpp  video_decoder.h
src/frame/: frame_writer.cpp  frame_writer.h
src/metadata/: metadata_extractor.cpp  metadata_extractor.h
upgrade/: Robocap-Flashing-Guide.md
web_download/: README.md  app.py
web_download/templates/: index.html
